# westshgit

./: .env  .gitignore  Cargo.toml  README.md  index.ts  notes.txt  output.txt  package.json  pyproject.toml  rustfmt.toml  server.py
.github/workflows/: docs.yaml
config/: .scalafmt.conf  README.md
crates/westshgit/: Cargo.toml
crates/westshgit/benches/: bench_cow_string.rs
crates/westshgit/src/: main.rs
portfolio/app/: routeTree.gen.ts
portfolio/app/lib/: seo.ts
portfolio/app/routes/: __root.tsx
portfolio/app/styles/: app.css
src/: main.rs
