[package]
name = "westshgit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
derive-new = "0.7.0"
hyper = { version = "1.6.0", features = ["full"] }
mio = "1.0.4"
reqwest = "0.12.18"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tonic = "0.13.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
